# fugata

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dashmap_dep_note.txt  .env.example  Cargo.toml  README.md
backend/migrations/: 0001_init.sql
backend/src/: config.rs  crypto.rs  errors.rs  lib.rs  main.rs  server.rs  util.rs
backend/src/handlers/: create.rs  delete.rs  get.rs  health.rs  mod.rs
backend/src/kms/: aws.rs  local.rs  mod.rs  vault.rs
backend/src/svc/: audit.rs  cache.rs  db.rs  hasher.rs  mod.rs  rate_limit.rs  service.rs
backend/src/util/: ip.rs
backend/tests/: integration.rs  kms_runtime_fail.rs  memory_exhaustion.rs  security_attacks.rs
docs/: api.md  architecture.md  configuration.md  security.md
examples/clients/: README.md  curl_example.sh  javascript_example.js  python_example.py
examples/deployment/: netlify.toml  render.yaml
