[package]
name = "fugata"
version = "0.1.0"
edition = "2021"
authors = ["Fugata Team"]
description = "Production-ready encrypted ephemeral secret-delivery backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "timeout", "cors", "limit"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "migrate", "chrono"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
ring = "0.17"
zeroize = "1.7"
subtle = "2.5"
base64 = "0.21"
hex = "0.4"

# HTTP client for Vault
reqwest = { version = "0.11", features = ["json"] }

# AWS KMS (optional)
aws-sdk-kms = { version = "1.12", optional = true }
aws-config = { version = "1.1", optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
lru = "0.12"
dashmap = "5.5"
once_cell = "1.19"
num_cpus = "1.16"

# Async traits
async-trait = "0.1"

[dev-dependencies]
# Testing
wiremock = "0.6"
tokio-test = "0.4"
rand = "0.9.2"

[features]
default = []
aws-kms = ["aws-sdk-kms", "aws-config"]

[[bin]]
name = "fugata"
path = "src/main.rs"
